# nami

./: .gitignore  .gitmodules  CMakeLists.txt  assignment.c  environment.c  lexer.c  lexer_colorful.c  lexer_main.c  main.c  nami_test.c  node.c  parse.c  statement.c
.github/workflows/: cmake.yml
include/nami/: assignment.h  environment.h  expression.h  fact.h  lexer.h  lexer_lut.h  nami.h  node.h  parse.h  statement.h  term.h  typedef.h
resources/: built_in  primitive
resources/examples/: program.nami
resources/examples/old/: array.nami  array.namr  array_ex.nami  base.nami  collection_example.nami
resources/grammar/: nami_grammar_3
resources/lexer/: keywords  keywords.namilex  lexer.md  operators  separators
resources/lexer/example/: main.nami  main.nami.lexed
resources/nami/: collection.nami  collection.nami.comments  comparable.nami  iterator.nami  list.nami  readable.nami
resources/tests/: tester
resources/tests/parse/: 10_2_div.json  paren_x_3_add.json  x_3.json  x_3_add.json  x_3_add_y_2_sub_mul.json  x_3_y_mul_2_4_div_sub_add.json  x_add.json  x_mul_mul.json
resources/tests/programs/: a  fib.nami  gcd.nami
shell/: generate_lexer.sh  nami_build.sh
